deploy/k8s/GTM_by_haproxy/freewall-allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: test
spec:
  egress:
  - {}
  podSelector: {}
  policyTypes:
  - Egress
