deploy/k8s/GTM_by_haproxy/freewall-allow-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: test
spec:
  ingress:
  - {}
  podSelector: {}
  policyTypes:
  - Ingress
